@@ -4,9 +4,6 @@ To be addressed before 7.18.0 (planned release: January 2008)
 115 - Cleanup debugging messages in test harness, introduced for new minimum
       SSH version support for SCP, SFTP and SOCKS tests
       
-117 - Eric Landes patch for introducing the --tcp-keep* options
-      http://curl.haxx.se/mail/lib-2008-01/0038.html (review, consider)
-
 Less likely to go in 7.18.0
 ===========================
 
